# CommandLineTools

./: .gitignore  .jenkinsfile  CMakeLists.txt  Makefile  ReadMe.txt
cmake/: install_debian_package_at_DESY.sh.in  make_debian_package.sh.in  prepare_debian_package.cmake  referenceReadRegisterCommand.txt.in  referenceTestDMap.txt.in  referenceVersionCommand.txt.in  version.h.in
cmake/debian_package_templates/: control  control.in  copyright  copyright.in  mtca4u-command-line-tools.install  mtca4u-command-line-toolsDEBVERSION.install.in
src/: mtca4u_cmd.cpp
tests/dMapFiles/: dummies.dmap  mtcadummy.map  mtcadummy_withoutModules.map
tests/referenceTexts/: referenceMtca4uDeviceInfo.txt  referenceMtca4uInfo.txt  referenceMtca4uRegInfo.txt  referenceNoParameters.txt  referenceReadDMARawCommand.txt  referenceReadMultiplexedDataSequences.txt  referenceReadRegisterCommand.txt  referenceRegisterSizeCommand.txt  referenceTestDMap.txt  referenceWriteToRegisterCommand.txt
tests/scripts/: checkDriverIsLoaded.sh  filterOutput.sh  testCheckDriverIsLoaded.sh  testCheckMtca4uDeviceInfoCmd.sh  testCheckMtca4uInfoCmd.sh  testCheckMtca4uRegInfoCmd.sh  testDMap.sh  testNoParameters.sh  testReadDMARawCommand.sh  testReadMultiplexedDataSequences.sh  testReadRegisterCommand.sh  testRegisterSizeCommand.sh  testVersionCommand.sh  testWriteToRegisterCommand.sh
